--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -204,6 +204,8 @@ en:
       new:
         title: New newsletter
         from: E-mail address that will appear as sending the newsletter
+        body: Body
+        subject: Subject
       edit:
         title: Edit newsletter
       show:
@@ -221,4 +223,3 @@ en:
   backend_header:
     open_gov: "Gobierno abierto"
     administracion: "Administración"
-  
