--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -221,6 +221,8 @@ es:
         title: Nueva newsletter
         from: Dirección de correo electrónico que aparecerá como remitente de la newsletter
         body: Contenido
+        category: Categoría
+        select_category: Selecciona una categoría
         subject: Asunto
       edit:
         title: Editar newsletter
@@ -235,6 +237,8 @@ es:
         body: Contenido del email
         body_help_text: Así es como verán el email los usuarios
         send_alert: ¿Estás seguro/a de que quieres enviar esta newsletter a %{n} usuarios?
+        category: Categoría
+
   backend_header:
     open_gov: "Gobierno abierto"
     administracion: "Administración"
